# cringe

./: .gitignore  CMakeLists.txt  README.md
cringelib/: CMakeLists.txt  cringe.c  cringe.h  cringe_test.c  kuznyechik.c  kuznyechik.h  kuznyechik_test.c
cringetool/: CMakeLists.txt  cringe_tool.c
